tests/baselines/reference/objectLitStructuralTypeMismatch.errors.txt
tests/cases/compiler/objectLitStructuralTypeMismatch.ts(2,5): error TS2322: Type '{ b: number; }' is not assignable to type '{ a: number; }'.
  Property 'a' is missing in type '{ b: number; }'.
tests/cases/compiler/objectLitStructuralTypeMismatch.ts(2,27): error TS2339: Property 'b' does not exist on type '{ a: number; }'.


==== tests/cases/compiler/objectLitStructuralTypeMismatch.ts (2 errors) ====
    // Shouldn't compile
    var x: { a: number; } = { b: 5 };
        ~
!!! error TS2322: Type '{ b: number; }' is not assignable to type '{ a: number; }'.
!!! error TS2322:   Property 'a' is missing in type '{ b: number; }'.
                              ~
!!! error TS2339: Property 'b' does not exist on type '{ a: number; }'.